logs/check_error.log
    Checking dotlin_codegen v0.1.0 (D:\rust\dotlin\crates\dotlin_codegen)
error[E0432]: unresolved import `cranelift_module::DataContext`
 --> crates\dotlin_codegen\src\lib.rs:3:24
  |
3 | use cranelift_module::{DataContext, FuncId, Linkage, Module, ModuleError};
  |                        ^^^^^^^^^^^
  |                        |
  |                        no `DataContext` in the root
  |                        help: a similar name exists in the module: `data_context`

error[E0412]: cannot find type `Context` in this scope
  --> crates\dotlin_codegen\src\lib.rs:79:19
   |
79 |         ctx: &mut Context,
   |                   ^^^^^^^ not found in this scope
   |
help: consider importing one of these items
   |
 1 + use crate::codegen::Context;
   |
 1 + use std::task::Context;
   |
 1 + use anyhow::Context;
   |

warning: unused import: `ObjectProduct`
 --> crates\dotlin_codegen\src\lib.rs:4:53
  |
4 | use cranelift_object::{ObjectBuilder, ObjectModule, ObjectProduct};
  |                                                     ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `expr`
   --> crates\dotlin_codegen\src\lib.rs:141:31
    |
141 |             Statement::Return(expr) => {
    |                               ^^^^ help: if this is intentional, prefix it with an underscore: `_expr`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0412, E0432.
For more information about an error, try `rustc --explain E0412`.
warning: `dotlin_codegen` (lib) generated 2 warnings
error: could not compile `dotlin_codegen` (lib) due to 2 previous errors; 2 warnings emitted
